# nerdvana-cli

./: .gitignore  .import_cycles_baseline.json  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  NIRNA.md  README.ko.md  README.md  install.sh  nerdvana.yml.example  pyproject.toml
.github/workflows/: live_smoke.yml  lsp_tests.yml  quality-gate.yml
.serena/: project.yml
docs/: agents.md  configuration.md  hooks.md  mcp-quota.md  security.md  testing-live.md
docs/adr/: 0003-anchormind-deferred.md  0004-lsp-cache-strategy.md
docs/benchmarks/: lsp-baseline-2026-05-13.md
docs/plans/: 2026-04-18-post-release-audit-plan.md
docs/retrospectives/: 2026-04-08-project-evaluation.md  2026-04-18-phase-0a.md  2026-04-18-phase-0b.md  2026-04-18-phase-d.md  2026-04-18-phase-g1.md  2026-04-18-phase-g2.md  2026-04-18-phase-h.md
nerdvana_cli/: __init__.py  main.py
nerdvana_cli/agents/: builtin.py  registry.py
nerdvana_cli/commands/: __init__.py  admin_command.py  cost_command.py  doctor_command.py  hook_command.py  mcp_command.py  memory_command.py  memory_commands.py  model_commands.py  observability_commands.py  profile_commands.py  session_command.py  session_commands.py  skill_command.py  system_commands.py
nerdvana_cli/core/: activity_hooks.py  agent_loop.py  (+35 more)
scripts/: bench_lsp.py  bench_lsp_diff.py  check_import_graph.py  check_pricing_freshness.py  check_test_collection.py  fetch_lsp_bench_fixtures.sh  sync_test_count.py  sync_version_badges.py  update_pricing.py
tests/: .collect-baseline  test_activity_command.py  test_activity_hooks.py  test_activity_indicator.py  test_activity_state.py  test_agent_loop_integration.py  test_agent_swarm_integration.py  test_agent_tool.py  test_agent_tool_execution.py  test_agent_types.py  test_analytics.py  test_anthropic_import.py  test_approval_mode.py  test_ask_permission_ux.py  test_auto_context_settings.py  test_bash_blacklist_extended.py  test_bash_security.py  test_bash_security_extended.py  test_bash_tool_security.py  test_bench_lsp_diff.py  test_builtin_hooks.py  test_cerebras_provider.py  test_chat_thinking_render.py  test_checkpoint.py  test_clipboard.py  test_code_editor.py  test_compact.py  test_complexity_detection.py  test_config_permissions.py  test_context_blocks.py  test_context_compaction.py  test_context_reminder.py  test_context_snapshot.py  test_context_usage_marker.py  test_context_window_resolution.py  test_cost_command.py  test_dashboard_tab.py  test_dashscope_provider.py  test_detect_provider.py  test_doctor_command.py  (+96 more)
(+152 files in other folders)
